[gd_scene load_steps=6 format=3 uid="uid://gf475yqk5h2j"]

[ext_resource type="Texture2D" uid="uid://djdvwxmvpq6jf" path="res://art/ui/UI_Sprites/Coin.png" id="1_5jobo"]
[ext_resource type="Script" uid="uid://bifv5jfuowf3v" path="res://art/ui/main_menu.gd" id="1_me1i1"]
[ext_resource type="FontFile" uid="uid://dngvdej52pski" path="res://art/ui/Fonts/Planet Jumbo.otf" id="2_me1i1"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_b4tus"]
texture = ExtResource("1_5jobo")
modulate_color = Color(0.50534403, 0.5053441, 0.50534403, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_80kkk"]
bg_color = Color(0.91228896, 0.9122889, 0.91228884, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
corner_detail = 12

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_me1i1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_b4tus")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -215.5
offset_top = -152.5
offset_right = 215.5
offset_bottom = 152.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Button_Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.064696394, 0.0646966, 0.06469644, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_80kkk")
text = "Start Game"

[node name="Button_Credits" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.064696394, 0.0646966, 0.06469644, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_80kkk")
text = "Credits"

[node name="Button_Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.064696394, 0.0646966, 0.06469644, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_80kkk")
text = "Quit"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -61.5
offset_top = 96.0
offset_right = 61.5
offset_bottom = 119.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 7
theme_override_constants/shadow_offset_y = 7
theme_override_fonts/font = ExtResource("2_me1i1")
theme_override_font_sizes/font_size = 60
text = "NAME OF GAME"

[node name="Credits" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1280.0
offset_right = 1280.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel2" type="Panel" parent="Credits"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_b4tus")

[node name="Label2" type="Label" parent="Credits"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -99.5
offset_top = 46.0
offset_right = 99.5
offset_bottom = 187.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 50
text = "CREDITS"

[node name="Button_Back" type="Button" parent="Credits"]
layout_mode = 0
offset_left = 1133.0
offset_top = 641.0
offset_right = 1225.0
offset_bottom = 696.0
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.064696394, 0.0646966, 0.06469644, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_80kkk")
text = "Back"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(640, 360)
position_smoothing_enabled = true

[connection signal="button_down" from="VBoxContainer/Button_Play" to="." method="_on_button_play_button_down"]
[connection signal="pressed" from="VBoxContainer/Button_Credits" to="." method="_on_button_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/Button_Quit" to="." method="_on_button_quit_pressed"]
[connection signal="pressed" from="Credits/Button_Back" to="." method="_on_button_back_pressed"]
